--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.14.37
+@version        1.14.38
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -14,6 +14,11 @@ domain("wiktionary.org"),
 domain("wikidata.org")
 {
 /* End of lines for removing, also remove "}" at the end of this file */
+
+:root
+{
+	--background-color-neutral: #111; /* "Common punctuation and other typographical symbols" https://en.wikipedia.org/wiki/Pilcrow#External_links */
+}
 
 a:not(.navbox .mw-selflink.selflink, .cdx-button, .new, .oo-ui-tool-link.ve-ui-toolbar-saveButton), /* :not("More details" in image viewer, red link, on edit top-right button "Publish changes...") */
 .vector-menu-dropdown .mw-list-item a,
